<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/Small"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:background="#FFFFFF"
        android:spinnerMode="dialog" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_height="match_parent"
            android:text="@string/r_back" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/r_fore" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/EditText03"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/button2"
        android:text="@string/dummytext" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/EditText02"
        android:ems="10"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/EditText03"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/EditText01"
        android:ems="10"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/EditText03"
        android:layout_below="@+id/EditText03"
        android:minHeight="0dp"
        android:minWidth="0dp"        
        android:text="@string/btn_inv"        
        android:textSize="@dimen/Small" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/EditText02"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/EditText02"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/textView1"
        android:layout_alignRight="@+id/EditText03"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btn_refresh"
        android:textSize="@dimen/Small" />

</RelativeLayout>